# tunitas-basics

./: .gitignore  Catalog-of-Components.md  ChangeLog  Contributing.md  LICENSE  Makefile.am  PACKAGES.md  README.md  buildconf  configure.ac
addenda/ares/: .gitignore  Makefile.am  README  ares_config.h.in  buildconf  configure.ac
addenda/ares/ac/: with-c-ares.m4
addenda/ares/lib/tests/: .gitignore  config.sh.in
addenda/ares/maintenance/: nearby
addenda/ares/mk/: .gitignore
addenda/ares/src/ares/: Buffer.xcpp  Channel.xcpp  Count.xcpp  Flag.xcpp  Flags.xcpp  Library.xcpp  Makefrag.am  Outcome.xcpp  Success.xcpp  addrinfo.Flag.xcpp  addrinfo.Flags.xcpp  count.literals.xcpp  count.xcpp  flags.Argument.xcpp  flags.Operator.xcpp  key.xcpp  nameinfo.Flag.xcpp  nameinfo.Flags.xcpp  namespace.xcpp  process.xcpp  query.xcpp  run.xcpp  select.xcpp  selectable.xcpp  time_bound.xcpp  timeout.xcpp  version.xcpp
addenda/ares/src/want/: Makefrag.am  namespace.xcpp
addenda/ares/tests/query/: Makefrag.am  a.00.test  aaaa.00.test  mx.00.test  naptr.00.test  ns.00.test  ptr.00.test  rigging.sh  soa.00.test  srv.00.test  txt.00.test  uri.00.test
addenda/ares/tests/unit/: Makefrag.am  list.test  rigging.sh  want.test
addenda/format/: .gitignore  Makefile.am  README  buildconf  configure.ac
addenda/format/maintenance/: nearby
addenda/format/src/format/: Funcall.xcpp  Makefrag.am  Separator.xcpp  as_empty.xcpp  as_null.xcpp  braket.xcpp  commalist.xcpp  curly.xcpp  dot.xcpp  funcall.xcpp  ine.xcpp  initialize.xcpp  inn.xcpp  integer.xcpp  namespace.xcpp  parenthesis.xcpp  pipe.xcpp  pipes.xcpp  q.xcpp  qq.xcpp  quote.xcpp  quote_quote.xcpp  separator.xcpp  square.xcpp  tuple.xcpp
addenda/format/src/want/: Makefrag.am  namespace.xcpp
addenda/format/tests/unit/: Makefrag.am  all.test  framework.sh  tuple.test
addenda/ip/: .gitignore  Makefile.am  README  configure.ac
addenda/ip/include/module-ip/: netdb.h
addenda/ip/maintenance/: nearby
addenda/ip/src/ip/: Address.xcpp  Makefrag.am  as.RESULT.Address.xcpp  as.RESULT.in4.addr.xcpp  as.RESULT.in4.addr_t.xcpp  as.RESULT.in4.xcpp  as.RESULT.in6.addr.xcpp  as.RESULT.in6.addr_t.xcpp  as.RESULT.in6.xcpp  as.RESULT.string.xcpp  as.xcpp  hostport.in4.xcpp  hostport.in6.xcpp  hostport.xcpp  in.xcpp  in4.xcpp  in6.xcpp  namespace.xcpp
addenda/ip/src/want/: Makefrag.am  bigint.xcpp  int128_t.xcpp  maximum.xcpp  minimum.xcpp  namespace.xcpp  nonstd.is_signed.xcpp  nonstd.is_unsigned.xcpp  nonstd.numeric_limits.xcpp  nonstd.required.Among.xcpp  uint128_t.xcpp
addenda/ip/tests/unit/: Makefrag.am  framework.sh  list.test  want.test
addenda/json/: .gitignore  Makefile.am  README  configure.ac
addenda/json/maintenance/: nearby
addenda/json/mk/: .gitignore
addenda/json/src/json/: Exception.xcpp  Features.xcpp  Makefrag.am  Reader.xcpp  String.xcpp  Value.xcpp  Writer.xcpp  as.RESULT.String.xcpp  as.RESULT.Value.xcpp  as.RESULT.disallowed.xcpp  as.RESULT.string.xcpp  as.String.String.xcpp  as.String.Value.xcpp  as.String.xcpp  as.Value.Value.xcpp  as.Value.xcpp  as.string.String.xcpp  as.string.Value.xcpp  as.string.string.xcpp  as.string.xcpp  as.xcpp  failure.constants.xcpp  failure.xcpp  lexical_cast.xcpp  namespace.xcpp  pairwise.xcpp  parse.xcpp  to.String.ARGUMENT.xcpp  to.String.String.xcpp  to.String.char_array.xcpp  to.String.char_pointer.xcpp  to.String.xcpp  to.Value.ARGUMENT.xcpp  to.Value.String.xcpp  to.Value.Value.xcpp  to.Value.stdint.xcpp  to.Value.xcpp  to.xcpp
addenda/json/tests/pretty/: Makefrag.am  usage.test  version.test
addenda/json/tests/unit/: Makefrag.am  all.test  framework.sh  list.test
addenda/nonstd/: Makefile.am  README  configure.ac
addenda/nonstd/ac/: check-half.m4
addenda/nonstd/lib/: .gitignore
addenda/nonstd/maintenance/: nearby
addenda/nonstd/src/ish/: Makefrag.am  namespace.xcpp
addenda/nonstd/src/mvr/: Makefrag.am  SAV.xcpp  State.xcpp  andvalue.xcpp  namespace.xcpp  ok.xcpp  recv.xcpp  send.xcpp  value.xcpp
addenda/nonstd/src/nonstd/: Makefrag.am  Outcome.xcpp  Success.xcpp  Visitor.xcpp  array.xcpp  basic_dope.consty.xcpp  basic_dope.xcpp  basic_string.xcpp  basic_string_view.xcpp  bidirectional_iterator_tag.xcpp  bigint.xcpp  bignum.xcpp  const_dope.xcpp  constructible_from.xcpp  contiguous_iterator_tag.xcpp  convertible_to.xcpp  copy.xcpp  dope.xcpp  endian.xcpp  float16_t.xcpp  float32_t.xcpp  float64_t.xcpp  floats.xcpp  forward_iterator_tag.xcpp  get_money.xcpp  get_time.xcpp  initialized.Type.xcpp  input_iterator_tag.xcpp  int128_t.xcpp  integers.xcpp  (+43 more)
addenda/openssl/: .gitignore  Makefile.am  README  buildconf  configure.ac
addenda/openssl/maintenance/: nearby
addenda/options/: .gitignore  Makefile.am  README  buildconf  configure.ac
addenda/options/lib/: .gitignore
addenda/options/maintenance/: nearby
addenda/options/mk/: .gitignore
addenda/rigging/: .gitignore  Makefile.am  README  buildconf  configure.ac
addenda/rigging/maintenance/: nearby
addenda/rigging/tests/: Exit.test  Makefrag.am  framework.sh  list.test
addenda/shell/: Makefile.am  README  configure.ac
addenda/shell/lib/: .gitignore
addenda/shell/maintenance/: nearby
addenda/slurp/: .gitignore  Makefile.am  README  buildconf  configure.ac
addenda/slurp/maintenance/: nearby
addenda/sqlite/: .gitignore  Makefile.am  README  configure.ac
addenda/sqlite/maintenance/: nearby
addenda/sqlite/mk/: .gitignore
addenda/sqlite/tests/: .gitignore
addenda/string/: .gitignore  Makefile.am  README  configure.ac
addenda/string/maintenance/: nearby
addenda/sys/: .gitignore  Makefile.am  README  configure.ac
addenda/sys/maintenance/: nearby
addenda/sys/mk/: .gitignore  sys.o.DUMMIES.mk
addenda/sys/modules/: sys.posix.af  sys.posix.af.Type  sys.posix.af.constants  sys.posix.ipproto  sys.posix.ipproto.Type  sys.posix.ipproto.constants  sys.posix.pf  sys.posix.pf.Type  sys.posix.pf.constants  sys.posix.sock  sys.posix.sock.Type  sys.posix.sock.constants
addenda/uuid/: .gitignore  Makefile.am  README  configure.ac
addenda/uuid/maintenance/: nearby
addenda/uuid/mk/: .gitignore
(+7932 files in other folders)
